wrapped navbar and router-outlet, outlet wrapper overflows, navbar not fixed with position fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-html, body { height: 100%; }
+html, body { height: 100%; overflow: hidden; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 #loginForm {
-    height: 50vh;
+    margin-top: 40px;
 }
 
 #navbar {
     width: 100%;
-    position: fixed;
-    top: 0;
+    height: 40px;
     background-color: #00588e;
 }
 
@@ -22,8 +18,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     color: white;
 }
 
+.nav-button {
+    z-index: 1;
+}
+
 .nav {
-    margin-bottom: 4em;
+
 }
 
 .nav-header {
@@ -33,5 +33,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     width: 100%;
     margin: 0 auto;
     text-align: center;
-    z-index: -1;
+}
+
+.outlet {
+    padding-top: 1em;
+    height: calc(100% - 40px - 1em);
+    overflow: scroll;
 }
